@@ -1,2 +1,0 @@
-The xsetroot program is used to switch XInput devices between absolute
-and relative positioning. This is from the modular X.org X11 project.
